[package]
name = "the-dark-matter-problem"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
server = []
client = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.12.1", features = [
    "dynamic_linking"
] } # Remove Features Before Release
bevy_rapier2d = "0.23.0"
bevy_renet = { version = "0.0.10", features = ["serde"] }
bincode = "1.3.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.5.6"
public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
